--- a/pollsapp/templates/polls/question.html
+++ b/pollsapp/templates/polls/question.html
@@ -1,5 +1,8 @@
+{% extends 'base.html' %}
 
+{% block title %}Vota{% endblock %}
 
+{% block content %}
 <h1>{{ question }}</h1>
 <form method="post">
     {% csrf_token %}
@@ -14,3 +17,4 @@
     {% endfor %}
     <input type="submit" value="Votar">
 </form>
+{% endblock %}
