--- a/pollsapp/templates/polls/results.html
+++ b/pollsapp/templates/polls/results.html
@@ -1,6 +1,12 @@
+{% extends 'base.html' %}
+
+{% block title %}Resultado{% endblock %}
+
+{% block content %}
 <h1>{{ question }}</h1>
 <ul>
     {% for c in question.choice_set.all %}
     <li>{{ c.choice_text }} --> {{ c.votes }} </li>
     {% endfor %}
 </ul>
+{% endblock %}
