--- a/pollsapp/templates/polls/question.html
+++ b/pollsapp/templates/polls/question.html
@@ -4,14 +4,15 @@
 
 {% block content %}
 <h1>{{ question }}</h1>
+{% if error_message %}
+<div class="alert">
+    <p>{{ error_message }}</p>
+</div>
+{% endif %}
 <form method="post">
     {% csrf_token %}
     {% for c in question.choice_set.all %}
-    <input 
-        type="radio" 
-        name="choice" 
-        id="choice_{{ c.id }}"
-        value="{{ c.id }}">
+    <input type="radio" name="choice" id="choice_{{ c.id }}" value="{{ c.id }}">
     <label for="choice_{{ c.id }}">{{ c.choice_text }}</label>
     <br>
     {% endfor %}
