--- a/pollsapp/templates/polls/results.html
+++ b/pollsapp/templates/polls/results.html
@@ -9,4 +9,6 @@
     <li>{{ c.choice_text }} --> {{ c.votes }} </li>
     {% endfor %}
 </ul>
+<hr>
+<a href="{% url 'polls:home' %}">Inicio</a>
 {% endblock %}
